# PGK

./: README.md  backup.txt
Lista1/: Makefile  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  compile.sh  zadanie1.cpp
Lista2/: Makefile  zadanie2.cpp
Lista3/: Makefile  zadanie3  zadanie3.cpp
Lista4/: AGL3Drawable.hpp  AGL3Window.cpp  AGL3Window.hpp  CMakeLists.txt  Camera.h  Cube.cpp  Cube.h  Linetab.h  MyLine.cpp  MyLine.h  Obstacles.cpp  Obstacles.h  Sphere.cpp  Sphere.h  main.cpp
Lista4/Shaders/: camera.vs
lista3deb/: AGL3Drawable.hpp  AGL3Window.cpp  CMakeCache.txt  CMakeLists.txt  Linetab.cpp  Linetab.h  Makefile  MyLine.cpp  MyLine.h  cmake_install.cmake  dane  lista3deb  lista3deb.cbp  zadanie3.cpp
